--- a/index.html
+++ b/index.html
@@ -1,24 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Name</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
-          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+
 
     <!-- <link href="assets/css/vendor.css" rel="stylesheet"/> -->
-    <link href="assets/css/prod.css" rel="stylesheet"/>
+    <link href="assets/css/prod.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,100,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rochester&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <nav>
+        <header>
+            <div class="width-container">
+                <div class="menu">
+                    <ul>
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Menu</a></li>
+                        <li><a>Live Shows</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+    </nav>
+    <main>
+        <article>
+            <div class="main-box">
+                <div class="height-box">
+                    <h4>E S T. | 2 0 2 3</h4>
+                    <h2>121</h2>
+                    <h3>BAR</h3>
+                    <h1>500 Terry Francois St.</h1>
+                    <h1>San Francisco, CA 94158</h1>
+                    <h1>Open from 5PM - 2AM</h1>
+                </div>
+                <div class="width-box">
 
-<nav></nav>
-<main></main>
-<footer></footer>
-
-
-<script src="assets/js/vendor.js"></script>
-<script src="assets/js/prod.js"></script>
-
+                </div>
+            </div>
+        </article>
+    </main>
+    <footer></footer>
+    <script src="assets/js/vendor.js"></script>
+    <script src="assets/js/prod.js"></script>
 </body>
+
 </html>
