sections and a few updates

--- a/index.html
+++ b/index.html
@@ -43,11 +43,39 @@
                     <h1>San Francisco, CA 94158</h1>
                     <h1>Open from 5PM - 2AM</h1>
                 </div>
-                <div class="width-box">
-
-                </div>
+                <div class="width-box"></div>
             </div>
         </article>
+        <section>
+            <h5>ABOUT</h5>
+            <h6>YOUR NEIGHBORHOOD</br> INSTITUTION</h6>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+            <div class="arrow"></div>
+        </section>
+        <section class="horizontal nomargin">
+            <div class="widthbox">
+                <div class="beer"></div>
+                <div class="information">
+                    <h5>HAPPY HOUR</h5>
+                    <h6>CRAFT BEER TUESDAY</h6>
+                    <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                    <div class="width-container"></div>
+                    <div class="height-container"></div>
+                </div>
+            </div>
+        </section>
+        <section class="horizontal">
+            <div class="widthboxend reverse">
+                <div class="beer"></div>
+                <div class="information">
+                    <h5>MUSIC</h5>
+                    <h6>NEXT SHOW: </br> TYLER REESE</h6>
+                    <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+                    <div class="width-container"></div>
+                    <div class="height-container"></div>
+                </div>
+            </div>
+            </section>
     </main>
     <footer></footer>
     <script src="assets/js/vendor.js"></script>
