--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,100,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rochester&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <head>
+
+    </head>
 </head>
 
 <body>
@@ -34,17 +37,21 @@
     </nav>
     <main>
         <article>
-            <div class="main-box">
-                <div class="height-box">
-                    <h4>E S T. | 2 0 2 3</h4>
-                    <h2>121</h2>
-                    <h3>BAR</h3>
-                    <h1>500 Terry Francois St.</h1>
-                    <h1>San Francisco, CA 94158</h1>
-                    <h1>Open from 5PM - 2AM</h1>
+            <div class="block">
+                <img src="assets/images/picture1.jpg" data-speed="1.0" class="img-parallax">
+                <div class="main-box">
+                    <div class="height-box">
+                        <h4>E S T. | 2 0 2 3</h4>
+                        <h2>121</h2>
+                        <h3>BAR</h3>
+                        <h1>500 Terry Francois St.</h1>
+                        <h1>San Francisco, CA 94158</h1>
+                        <h1>Open from 5PM - 2AM</h1>
+                    </div>
+                    <div class="width-box"></div>
                 </div>
-                <div class="width-box"></div>
             </div>
+
         </article>
         <section>
             <h5>ABOUT</h5>
@@ -75,11 +82,14 @@
                     <div class="height-container"></div>
                 </div>
             </div>
-            </section>
+        </section>
+        <div class="block">
+            <img src="assets/images/constr.jpg" data-speed="1.0" class="img-parallax">
+        </div>
     </main>
     <footer></footer>
-    <script src="assets/js/vendor.js"></script>
-    <script src="assets/js/prod.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="assets/js/scroll.js"></script>
 </body>
 
 </html>
