contact us section -without form

--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
         <div class="block">
             <img src="assets/images/constr.jpg" data-speed="1.0" class="img-parallax">
         </div>
+        <section class="row">
+            <div class="heightbox marginright">
+                <h6>CONTACT US</h6>
+               <div class="infoSmall">
+                   <p>
+                        I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content.
+                   </p>
+                   <p>
+                        123-456-7890 | info@mysite.com
+                   </p>
+                   <div class="width-container"></div>
+                   <div class="height-container"></div>
+               </div> 
+            </div>
+            <div class="heightbox"></div>
+        </section>
     </main>
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
