section part two, maps, footer

--- a/index.html
+++ b/index.html
@@ -100,10 +100,47 @@
                    <div class="height-container"></div>
                </div> 
             </div>
-            <div class="heightbox"></div>
+            <div class="heightbox justifycenter">
+                <h5>BOOK A TABLE</h5>
+                <form action="/action_page.php">
+                    <select name="date" class="margintop">
+                      <option value="date">Date</option>
+                    </select>
+                    <select>
+                      <option value="time">Time</option>
+                    </select>
+                    <select>
+                      <option value="party">Party Size</option>
+                    </select>
+                    <input type="submit" value="Book Now">
+                </form>
+            </div>
         </section>
+        <div class="maps">
+
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="containerone marginright">
+            <p>Join the Club & Get Updates on Special Events</p>
+            <form action="/action_page.php">
+                <input type="text" name="tekstas" value="Enter your email here*">
+                <input type="submit" value="Subscribe Now">
+            </form>
+        </div>
+        <div class="containerone flexend">
+            <div class="icons">
+                <div class="facebook"></div>
+                <div class="foursquare"></div>
+                <div class="twitter"></div>
+                <div class="instagram"></div>
+            </div>
+            <h1>
+                © 2023 by 121 BAR.br <br>
+                Proudly created with Wix.com
+            </h1>
+        </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/js/scroll.js"></script>
 </body>
